--- a/index.html
+++ b/index.html
@@ -38,5 +38,78 @@
         </div>
       </div>
     </header>
+
+    <main>
+      <!-- Inner -->
+      <section class="container inner">
+        <div class="inner__cont">
+          <h1 class="inner__title">Many reasons to get up and start to get back in the business</h1>
+          <p class="inner__subtitle">
+            The harder you work for something, the greater you'll feel when you achieve it.
+          </p>
+          <div class="inner__btn">
+            <button class="button inner__learn">Learn More</button>
+            <button class="button inner__demo">Demo</button>
+          </div>
+          <div class="inner__video">
+            <iframe
+              class="inner__iframe"
+              width="140"
+              height="80"
+              src="https://www.youtube.com/embed/6RwNT2ravz0"
+              title="YouTube video player"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+              allowfullscreen
+            ></iframe>
+            <div class="inner__desc">
+              <p class="inner__desc-text">
+                The harder you work for something, the greater you'll feel when you achieve it.
+              </p>
+              <a class="inner__desc-link" href="#">Watch preview</a>
+            </div>
+          </div>
+        </div>
+        <div class="inner__img">
+          <img src="./images/abstract-man.png" alt="Abstract man" />
+        </div>
+      </section>
+
+      <!-- Partners -->
+      <section class="partners">
+        <div class="container partners__cont">
+          <a href="#" class="partners__link">
+            <svg class="partners__icon">
+              <use href="./images/svg/sprite-svg.svg#Frame"></use>
+            </svg>
+          </a>
+          <a href="#" class="partners__link">
+            <svg class="partners__icon">
+              <use href="./images/svg/sprite-svg.svg#Frame-1"></use>
+            </svg>
+          </a>
+          <a href="#" class="partners__link">
+            <svg class="partners__icon">
+              <use href="./images/svg/sprite-svg.svg#Frame-2"></use>
+            </svg>
+          </a>
+          <a href="#" class="partners__link">
+            <svg class="partners__icon">
+              <use href="./images/svg/sprite-svg.svg#Frame-3"></use>
+            </svg>
+          </a>
+          <a href="#" class="partners__link">
+            <svg class="partners__icon">
+              <use href="./images/svg/sprite-svg.svg#Frame-4"></use>
+            </svg>
+          </a>
+          <a href="#" class="partners__link">
+            <svg class="partners__icon">
+              <use href="./images/svg/sprite-svg.svg#Frame-5"></use>
+            </svg>
+          </a>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
