--- a/index.html
+++ b/index.html
@@ -16,100 +16,189 @@
     <link rel="stylesheet" href="./css/main.min.css" />
   </head>
   <body>
-    <header class="header">
-      <div class="container header__cont">
-        <div class="header__site-nav">
-          <a href="#" class="header__logo">
-            <svg class="logo">
-              <use href="./images/svg/sprite-svg.svg#Logo"></use>
-            </svg>
-          </a>
-          <nav class="header__nav">
-            <a href="#" class="header__link">About</a>
-            <a href="#" class="header__link">Gallery</a>
-            <a href="#" class="header__link">Pricing</a>
-            <a href="#" class="header__link">FAQ</a>
-            <a href="#" class="header__link">Benefits</a>
-          </nav>
-        </div>
-        <div class="header__authorize">
-          <button class="button header__signin">Sign In</button>
-          <button class="button header__signup">Sign Up</button>
-        </div>
-      </div>
-    </header>
-
     <main>
-      <!-- Inner -->
-      <section class="container inner">
-        <div class="inner__cont">
-          <h1 class="inner__title">Many reasons to get up and start to get back in the business</h1>
-          <p class="inner__subtitle">
-            The harder you work for something, the greater you'll feel when you achieve it.
-          </p>
-          <div class="inner__btn">
-            <button class="button inner__learn">Learn More</button>
-            <button class="button inner__demo">Demo</button>
-          </div>
-          <div class="inner__video">
-            <iframe
-              class="inner__iframe"
-              width="140"
-              height="80"
-              src="https://www.youtube.com/embed/6RwNT2ravz0"
-              title="YouTube video player"
-              frameborder="0"
-              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-              allowfullscreen
-            ></iframe>
-            <div class="inner__desc">
-              <p class="inner__desc-text">
-                The harder you work for something, the greater you'll feel when you achieve it.
-              </p>
-              <a class="inner__desc-link" href="#">Watch preview</a>
+      <div class="wrap-head">
+        <!-- Header -->
+        <header class="header">
+          <div class="container header__cont">
+            <div class="header__site-nav">
+              <a href="#" class="header__logo">
+                <svg class="logo">
+                  <use href="./images/svg/sprite-svg.svg#Logo"></use>
+                </svg>
+              </a>
+              <nav class="header__nav">
+                <a href="#" class="header__link">About</a>
+                <a href="#" class="header__link">Gallery</a>
+                <a href="#" class="header__link">Pricing</a>
+                <a href="#" class="header__link">FAQ</a>
+                <a href="#" class="header__link">Benefits</a>
+              </nav>
+            </div>
+            <div class="header__authorize">
+              <button class="button header__signin">Sign In</button>
+              <button class="button header__signup">Sign Up</button>
             </div>
           </div>
-        </div>
-        <div class="inner__img">
-          <img src="./images/abstract-man.png" alt="Abstract man" />
-        </div>
-      </section>
-
-      <!-- Partners -->
-      <section class="partners">
-        <div class="container partners__cont">
-          <a href="#" class="partners__link">
-            <svg class="partners__icon">
-              <use href="./images/svg/sprite-svg.svg#Frame"></use>
-            </svg>
-          </a>
-          <a href="#" class="partners__link">
-            <svg class="partners__icon">
-              <use href="./images/svg/sprite-svg.svg#Frame-1"></use>
-            </svg>
-          </a>
-          <a href="#" class="partners__link">
-            <svg class="partners__icon">
-              <use href="./images/svg/sprite-svg.svg#Frame-2"></use>
-            </svg>
-          </a>
-          <a href="#" class="partners__link">
-            <svg class="partners__icon">
-              <use href="./images/svg/sprite-svg.svg#Frame-3"></use>
-            </svg>
-          </a>
-          <a href="#" class="partners__link">
-            <svg class="partners__icon">
-              <use href="./images/svg/sprite-svg.svg#Frame-4"></use>
-            </svg>
-          </a>
-          <a href="#" class="partners__link">
-            <svg class="partners__icon">
-              <use href="./images/svg/sprite-svg.svg#Frame-5"></use>
-            </svg>
-          </a>
-        </div>
-      </section>
+        </header>
+        <!-- Inner -->
+        <section class="container inner">
+          <div class="inner__cont">
+            <h1 class="inner__title">
+              Many reasons to get up and start to get back in the business
+            </h1>
+            <p class="inner__subtitle">
+              The harder you work for something, the greater you'll feel when you achieve it.
+            </p>
+            <div class="inner__btn">
+              <button class="button inner__learn">Learn More</button>
+              <button class="button inner__demo">Demo</button>
+            </div>
+            <div class="inner__video">
+              <iframe
+                class="inner__iframe"
+                width="140"
+                height="80"
+                src="https://www.youtube.com/embed/6RwNT2ravz0"
+                title="YouTube video player"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen
+              ></iframe>
+              <div class="inner__desc">
+                <p class="inner__desc-text">
+                  The harder you work for something, the greater you'll feel when you achieve it.
+                </p>
+                <a class="inner__desc-link" href="#">Watch preview</a>
+              </div>
+            </div>
+          </div>
+          <div class="inner__img">
+            <img src="./images/abstract-man.png" alt="Abstract man" />
+          </div>
+        </section>
+        <!-- Partners -->
+        <section class="partners">
+          <div class="container partners__cont">
+            <a href="#" class="partners__link">
+              <svg class="partners__icon">
+                <use href="./images/svg/sprite-svg.svg#Frame"></use>
+              </svg>
+            </a>
+            <a href="#" class="partners__link">
+              <svg class="partners__icon">
+                <use href="./images/svg/sprite-svg.svg#Frame-1"></use>
+              </svg>
+            </a>
+            <a href="#" class="partners__link">
+              <svg class="partners__icon">
+                <use href="./images/svg/sprite-svg.svg#Frame-2"></use>
+              </svg>
+            </a>
+            <a href="#" class="partners__link">
+              <svg class="partners__icon">
+                <use href="./images/svg/sprite-svg.svg#Frame-3"></use>
+              </svg>
+            </a>
+            <a href="#" class="partners__link">
+              <svg class="partners__icon">
+                <use href="./images/svg/sprite-svg.svg#Frame-4"></use>
+              </svg>
+            </a>
+            <a href="#" class="partners__link">
+              <svg class="partners__icon">
+                <use href="./images/svg/sprite-svg.svg#Frame-5"></use>
+              </svg>
+            </a>
+          </div>
+        </section>
+        <!-- Your Choice -->
+        <section class="yourchoice">
+          <div class="container yourchoice__cont">
+            <h2 class="yourchoice__title">Your choice</h2>
+            <p class="yourchoice__text">
+              There are many reasons to get down and start to get depressed about your situation.
+            </p>
+            <ul class="yourchoice__list">
+              <li class="yourchoice__item">
+                <div class="yourchoice__item-box">
+                  <svg class="yourchoice__item-icon">
+                    <use href="./images/svg/sprite-svg.svg#Flip-horizontal"></use>
+                  </svg>
+                  <h2 class="yourchoice__item-title">Ecstatic elegance</h2>
+                </div>
+                <p class="yourchoice__item-text">
+                  Article nor prepare chicken you him now. Shy merits say advice ten before lovers
+                  innate add.
+                </p>
+              </li>
+              <li class="yourchoice__item">
+                <div class="yourchoice__item-box">
+                  <svg class="yourchoice__item-icon">
+                    <use href="./images/svg/sprite-svg.svg#Airpods"></use>
+                  </svg>
+                  <h2 class="yourchoice__item-title">Folly words widow</h2>
+                </div>
+                <p class="yourchoice__item-text">
+                  Effect if in up no depend seemed. Ecstatic elegance gay but disposed. We me rent
+                  been part what.
+                </p>
+              </li>
+              <li class="yourchoice__item">
+                <div class="yourchoice__item-box">
+                  <svg class="yourchoice__item-icon">
+                    <use href="./images/svg/sprite-svg.svg#LTE1"></use>
+                  </svg>
+                  <h2 class="yourchoice__item-title">Possible procured trifling</h2>
+                </div>
+                <p class="yourchoice__item-text">
+                  We me rent been part what. An concluded sportsman offending so provision mr
+                  education.
+                </p>
+              </li>
+              <li class="yourchoice__item">
+                <div class="yourchoice__item-box">
+                  <svg class="yourchoice__item-icon">
+                    <use href="./images/svg/sprite-svg.svg#Thunder-move"></use>
+                  </svg>
+                  <h2 class="yourchoice__item-title">Open game</h2>
+                </div>
+                <p class="yourchoice__item-text">
+                  Shy merits say advice ten before lovers innate add. She cordially behaviour can
+                  attempted estimable.
+                </p>
+              </li>
+              <li class="yourchoice__item">
+                <div class="yourchoice__item-box">
+                  <svg class="yourchoice__item-icon">
+                    <use href="./images/svg/sprite-svg.svg#Attachment"></use>
+                  </svg>
+                  <h2 class="yourchoice__item-title">Endeavor</h2>
+                </div>
+                <p class="yourchoice__item-text">
+                  Improve ashamed married expense bed her comfort pursuit mrs. Four time took ye
+                  your as fail lady.
+                </p>
+              </li>
+              <li class="yourchoice__item">
+                <div class="yourchoice__item-box">
+                  <svg class="yourchoice__item-icon">
+                    <use href="./images/svg/sprite-svg.svg#Bulb"></use>
+                  </svg>
+                  <h2 class="yourchoice__item-title">Comfort pursuit</h2>
+                </div>
+                <p class="yourchoice__item-text">
+                  Had denoting properly jointure you occasion directly raillery. In said to of poor
+                  full be post face snug.
+                </p>
+              </li>
+            </ul>
+            <div class="yourchoice__img">
+              <img src="./images/rain-star.png" alt="Rain Stars" />
+            </div>
+          </div>
+        </section>
+      </div>
     </main>
   </body>
 </html>
