--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>WebStudio</title>
+    <title>Concept for data processing company</title>
     <link
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Open+Sans:wght@600;700&family=Rubik:wght@400;500&display=swap"
       rel="stylesheet"
@@ -16,189 +16,255 @@
     <link rel="stylesheet" href="./css/main.min.css" />
   </head>
   <body>
-    <main>
-      <div class="wrap-head">
-        <!-- Header -->
-        <header class="header">
-          <div class="container header__cont">
-            <div class="header__site-nav">
-              <a href="#" class="header__logo">
-                <svg class="logo">
-                  <use href="./images/svg/sprite-svg.svg#Logo"></use>
-                </svg>
-              </a>
-              <nav class="header__nav">
-                <a href="#" class="header__link">About</a>
-                <a href="#" class="header__link">Gallery</a>
-                <a href="#" class="header__link">Pricing</a>
-                <a href="#" class="header__link">FAQ</a>
-                <a href="#" class="header__link">Benefits</a>
-              </nav>
-            </div>
-            <div class="header__authorize">
-              <button class="button header__signin">Sign In</button>
-              <button class="button header__signup">Sign Up</button>
-            </div>
-          </div>
-        </header>
-        <!-- Inner -->
-        <section class="container inner">
-          <div class="inner__cont">
-            <h1 class="inner__title">
-              Many reasons to get up and start to get back in the business
-            </h1>
-            <p class="inner__subtitle">
-              The harder you work for something, the greater you'll feel when you achieve it.
-            </p>
-            <div class="inner__btn">
-              <button class="button inner__learn">Learn More</button>
-              <button class="button inner__demo">Demo</button>
-            </div>
-            <div class="inner__video">
-              <iframe
-                class="inner__iframe"
-                width="140"
-                height="80"
-                src="https://www.youtube.com/embed/6RwNT2ravz0"
-                title="YouTube video player"
-                frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen
-              ></iframe>
-              <div class="inner__desc">
-                <p class="inner__desc-text">
-                  The harder you work for something, the greater you'll feel when you achieve it.
-                </p>
-                <a class="inner__desc-link" href="#">Watch preview</a>
-              </div>
-            </div>
-          </div>
-          <div class="inner__img">
-            <img src="./images/abstract-man.png" alt="Abstract man" />
-          </div>
-        </section>
-        <!-- Partners -->
-        <section class="partners">
-          <div class="container partners__cont">
-            <a href="#" class="partners__link">
-              <svg class="partners__icon">
-                <use href="./images/svg/sprite-svg.svg#Frame"></use>
-              </svg>
-            </a>
-            <a href="#" class="partners__link">
-              <svg class="partners__icon">
-                <use href="./images/svg/sprite-svg.svg#Frame-1"></use>
-              </svg>
-            </a>
-            <a href="#" class="partners__link">
-              <svg class="partners__icon">
-                <use href="./images/svg/sprite-svg.svg#Frame-2"></use>
-              </svg>
-            </a>
-            <a href="#" class="partners__link">
-              <svg class="partners__icon">
-                <use href="./images/svg/sprite-svg.svg#Frame-3"></use>
-              </svg>
-            </a>
-            <a href="#" class="partners__link">
-              <svg class="partners__icon">
-                <use href="./images/svg/sprite-svg.svg#Frame-4"></use>
-              </svg>
-            </a>
-            <a href="#" class="partners__link">
-              <svg class="partners__icon">
-                <use href="./images/svg/sprite-svg.svg#Frame-5"></use>
-              </svg>
-            </a>
-          </div>
-        </section>
-        <!-- Your Choice -->
-        <section class="yourchoice">
-          <div class="container yourchoice__cont">
-            <h2 class="yourchoice__title">Your choice</h2>
-            <p class="yourchoice__text">
-              There are many reasons to get down and start to get depressed about your situation.
-            </p>
-            <ul class="yourchoice__list">
-              <li class="yourchoice__item">
-                <div class="yourchoice__item-box">
-                  <svg class="yourchoice__item-icon">
-                    <use href="./images/svg/sprite-svg.svg#Flip-horizontal"></use>
-                  </svg>
-                  <h2 class="yourchoice__item-title">Ecstatic elegance</h2>
-                </div>
-                <p class="yourchoice__item-text">
-                  Article nor prepare chicken you him now. Shy merits say advice ten before lovers
-                  innate add.
-                </p>
-              </li>
-              <li class="yourchoice__item">
-                <div class="yourchoice__item-box">
-                  <svg class="yourchoice__item-icon">
-                    <use href="./images/svg/sprite-svg.svg#Airpods"></use>
-                  </svg>
-                  <h2 class="yourchoice__item-title">Folly words widow</h2>
-                </div>
-                <p class="yourchoice__item-text">
-                  Effect if in up no depend seemed. Ecstatic elegance gay but disposed. We me rent
-                  been part what.
-                </p>
-              </li>
-              <li class="yourchoice__item">
-                <div class="yourchoice__item-box">
-                  <svg class="yourchoice__item-icon">
-                    <use href="./images/svg/sprite-svg.svg#LTE1"></use>
-                  </svg>
-                  <h2 class="yourchoice__item-title">Possible procured trifling</h2>
-                </div>
-                <p class="yourchoice__item-text">
-                  We me rent been part what. An concluded sportsman offending so provision mr
-                  education.
-                </p>
-              </li>
-              <li class="yourchoice__item">
-                <div class="yourchoice__item-box">
-                  <svg class="yourchoice__item-icon">
-                    <use href="./images/svg/sprite-svg.svg#Thunder-move"></use>
-                  </svg>
-                  <h2 class="yourchoice__item-title">Open game</h2>
-                </div>
-                <p class="yourchoice__item-text">
-                  Shy merits say advice ten before lovers innate add. She cordially behaviour can
-                  attempted estimable.
-                </p>
-              </li>
-              <li class="yourchoice__item">
-                <div class="yourchoice__item-box">
-                  <svg class="yourchoice__item-icon">
-                    <use href="./images/svg/sprite-svg.svg#Attachment"></use>
-                  </svg>
-                  <h2 class="yourchoice__item-title">Endeavor</h2>
-                </div>
-                <p class="yourchoice__item-text">
-                  Improve ashamed married expense bed her comfort pursuit mrs. Four time took ye
-                  your as fail lady.
-                </p>
-              </li>
-              <li class="yourchoice__item">
-                <div class="yourchoice__item-box">
-                  <svg class="yourchoice__item-icon">
-                    <use href="./images/svg/sprite-svg.svg#Bulb"></use>
-                  </svg>
-                  <h2 class="yourchoice__item-title">Comfort pursuit</h2>
-                </div>
-                <p class="yourchoice__item-text">
-                  Had denoting properly jointure you occasion directly raillery. In said to of poor
-                  full be post face snug.
-                </p>
-              </li>
-            </ul>
-            <div class="yourchoice__img">
-              <img src="./images/rain-star.png" alt="Rain Stars" />
-            </div>
-          </div>
-        </section>
+    <!-- Header -->
+    <header class="header">
+      <div class="container header__cont">
+        <div class="header__site-nav">
+          <a href="#" class="header__logo">
+            <svg class="logo">
+              <use href="./images/svg/sprite-svg.svg#Logo"></use>
+            </svg>
+          </a>
+          <nav class="header__nav">
+            <a href="#" class="header__link">About</a>
+            <a href="#" class="header__link">Gallery</a>
+            <a href="#" class="header__link">Pricing</a>
+            <a href="#" class="header__link">FAQ</a>
+            <a href="#" class="header__link">Benefits</a>
+          </nav>
+        </div>
+        <div class="header__authorize">
+          <button class="button header__signin">Sign In</button>
+          <button class="button header__signup">Sign Up</button>
+        </div>
       </div>
+    </header>
+    <main>
+      <!-- Inner -->
+      <section class="container inner">
+        <div class="inner__cont">
+          <h1 class="inner__title">Many reasons to get up and start to get back in the business</h1>
+          <p class="inner__subtitle">
+            The harder you work for something, the greater you'll feel when you achieve it.
+          </p>
+          <div class="inner__btn">
+            <button class="button inner__learn">Learn More</button>
+            <button class="button inner__demo">Demo</button>
+          </div>
+          <div class="inner__video">
+            <iframe
+              class="inner__iframe"
+              width="140"
+              height="80"
+              src="https://www.youtube.com/embed/6RwNT2ravz0"
+              title="YouTube video player"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+              allowfullscreen
+            ></iframe>
+            <div class="inner__desc">
+              <p class="inner__desc-text">
+                The harder you work for something, the greater you'll feel when you achieve it.
+              </p>
+              <a class="inner__desc-link" href="#">Watch preview</a>
+            </div>
+          </div>
+        </div>
+        <div class="inner__img">
+          <img src="./images/abstract-man.png" alt="Abstract man" />
+        </div>
+      </section>
+      <!-- Partners -->
+      <section class="partners">
+        <div class="container partners__cont">
+          <a href="#" class="partners__link">
+            <svg class="partners__icon">
+              <use href="./images/svg/sprite-svg.svg#Frame"></use>
+            </svg>
+          </a>
+          <a href="#" class="partners__link">
+            <svg class="partners__icon">
+              <use href="./images/svg/sprite-svg.svg#Frame-1"></use>
+            </svg>
+          </a>
+          <a href="#" class="partners__link">
+            <svg class="partners__icon">
+              <use href="./images/svg/sprite-svg.svg#Frame-2"></use>
+            </svg>
+          </a>
+          <a href="#" class="partners__link">
+            <svg class="partners__icon">
+              <use href="./images/svg/sprite-svg.svg#Frame-3"></use>
+            </svg>
+          </a>
+          <a href="#" class="partners__link">
+            <svg class="partners__icon">
+              <use href="./images/svg/sprite-svg.svg#Frame-4"></use>
+            </svg>
+          </a>
+          <a href="#" class="partners__link">
+            <svg class="partners__icon">
+              <use href="./images/svg/sprite-svg.svg#Frame-5"></use>
+            </svg>
+          </a>
+        </div>
+      </section>
+      <!-- Your Choice -->
+      <section class="yourchoice">
+        <div class="container yourchoice__cont">
+          <h2 class="yourchoice__title">Your choice</h2>
+          <p class="yourchoice__text">
+            There are many reasons to get down and start to get depressed about your situation.
+          </p>
+          <ul class="yourchoice__list">
+            <li class="yourchoice__item">
+              <div class="yourchoice__item-box">
+                <svg class="yourchoice__item-icon">
+                  <use href="./images/svg/sprite-svg.svg#Flip-horizontal"></use>
+                </svg>
+                <h2 class="yourchoice__item-title">Ecstatic elegance</h2>
+              </div>
+              <p class="yourchoice__item-text">
+                Article nor prepare chicken you him now. Shy merits say advice ten before lovers
+                innate add.
+              </p>
+            </li>
+            <li class="yourchoice__item">
+              <div class="yourchoice__item-box">
+                <svg class="yourchoice__item-icon">
+                  <use href="./images/svg/sprite-svg.svg#Airpods"></use>
+                </svg>
+                <h2 class="yourchoice__item-title">Folly words widow</h2>
+              </div>
+              <p class="yourchoice__item-text">
+                Effect if in up no depend seemed. Ecstatic elegance gay but disposed. We me rent
+                been part what.
+              </p>
+            </li>
+            <li class="yourchoice__item">
+              <div class="yourchoice__item-box">
+                <svg class="yourchoice__item-icon">
+                  <use href="./images/svg/sprite-svg.svg#LTE1"></use>
+                </svg>
+                <h2 class="yourchoice__item-title">Possible procured trifling</h2>
+              </div>
+              <p class="yourchoice__item-text">
+                We me rent been part what. An concluded sportsman offending so provision mr
+                education.
+              </p>
+            </li>
+            <li class="yourchoice__item">
+              <div class="yourchoice__item-box">
+                <svg class="yourchoice__item-icon">
+                  <use href="./images/svg/sprite-svg.svg#Thunder-move"></use>
+                </svg>
+                <h2 class="yourchoice__item-title">Open game</h2>
+              </div>
+              <p class="yourchoice__item-text">
+                Shy merits say advice ten before lovers innate add. She cordially behaviour can
+                attempted estimable.
+              </p>
+            </li>
+            <li class="yourchoice__item">
+              <div class="yourchoice__item-box">
+                <svg class="yourchoice__item-icon">
+                  <use href="./images/svg/sprite-svg.svg#Attachment"></use>
+                </svg>
+                <h2 class="yourchoice__item-title">Endeavor</h2>
+              </div>
+              <p class="yourchoice__item-text">
+                Improve ashamed married expense bed her comfort pursuit mrs. Four time took ye your
+                as fail lady.
+              </p>
+            </li>
+            <li class="yourchoice__item">
+              <div class="yourchoice__item-box">
+                <svg class="yourchoice__item-icon">
+                  <use href="./images/svg/sprite-svg.svg#Bulb"></use>
+                </svg>
+                <h2 class="yourchoice__item-title">Comfort pursuit</h2>
+              </div>
+              <p class="yourchoice__item-text">
+                Had denoting properly jointure you occasion directly raillery. In said to of poor
+                full be post face snug.
+              </p>
+            </li>
+          </ul>
+          <div class="yourchoice__img">
+            <img src="./images/rain-star.png" alt="Rain Stars" />
+          </div>
+        </div>
+      </section>
+
+      <!-- Increase -->
+      <section class="increase">
+        <div class="container increase__cont">
+          <div class="increase__content">
+            <h2 class="increase__title">
+              Increase your business <span class="increase__title-span">traffic</span>
+            </h2>
+            <p class="increase__text">
+              We are committed to processing the information in order to contact you and talk about
+              your project.
+            </p>
+            <button class="button increase__button" type="button">Learn More</button>
+          </div>
+          <div class="increase__img">
+            <img src="./images/increse-foto/photo1.jpg" alt="" class="increase__img-photo" />
+            <img src="./images/increse-foto/photo2.jpg" alt="" class="increase__img-group" />
+            <img src="./images/increse-foto/photo3.png" alt="" class="increase__img-rectangle" />
+            <img src="./images/increse-foto/photo4.png" alt="" class="increase__img-stacked" />
+          </div>
+
+          <img class="increase__picture" src="./images/picture.png" alt="abstract" />
+        </div>
+      </section>
+
+      <!-- Savemoney -->
+      <section class="savemoney">
+        <div class="container savemoney__cont">
+          <h2 class="savemoney__title">
+            3 Simple Ways To <span class="savemoney__title-akcent">Save</span> A Bunch <br />
+            Of <span class="savemoney__title-akcent">Money</span> When Buying A New Computer
+          </h2>
+          <p class="savemoney__text">
+            Fully customizable and neatly organized components <br />
+            will help you work faster without limiting creative freedom.
+          </p>
+          <div class="savemoney__list">
+            <div class="savemoney__item">
+              <h3 class="savemonay__item-title">100+</h3>
+              <p class="savemoney__item-text">5 Reasons To Purchase Desktop Computers</p>
+            </div>
+            <div class="savemoney__item">
+              <h3 class="savemonay__item-title">43,000+</h3>
+              <p class="savemoney__item-text">
+                3 Simple Ways To Save A Bunch Of Money When Buying A New Computer
+              </p>
+            </div>
+            <div class="savemoney__item">
+              <h3 class="savemonay__item-title">30+</h3>
+              <p class="savemoney__item-text">
+                A Discount Toner Cartridge Is Better Than Ever And You Will Save 50 Or More
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- Create -->
+      <section class="create">
+        <div class="container create__cont">
+          <div class="create__box">
+            <h2 class="create__title">
+              Create your <span class="create__title-akcent">next project</span> with startup
+              framework
+            </h2>
+            <button class="button create__button" type="button">Get Started</button>
+          </div>
+          <img class="create__picture" src="./images/step.png.png" alt="abstract" />
+        </div>
+      </section>
     </main>
   </body>
 </html>
