--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Concept for data processing company</title>
     <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Open+Sans:wght@600;700&family=Rubik:wght@400;500&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Montserrat:wght@400;500&family=Open+Sans:wght@400;600;700&family=Rubik:wght@400;500&display=swap"
       rel="stylesheet"
     />
     <link
@@ -122,7 +122,7 @@
                 <svg class="yourchoice__item-icon">
                   <use href="./images/svg/sprite-svg.svg#Flip-horizontal"></use>
                 </svg>
-                <h2 class="yourchoice__item-title">Ecstatic elegance</h2>
+                <h4 class="yourchoice__item-title">Ecstatic elegance</h4>
               </div>
               <p class="yourchoice__item-text">
                 Article nor prepare chicken you him now. Shy merits say advice ten before lovers
@@ -134,7 +134,7 @@
                 <svg class="yourchoice__item-icon">
                   <use href="./images/svg/sprite-svg.svg#Airpods"></use>
                 </svg>
-                <h2 class="yourchoice__item-title">Folly words widow</h2>
+                <h4 class="yourchoice__item-title">Folly words widow</h4>
               </div>
               <p class="yourchoice__item-text">
                 Effect if in up no depend seemed. Ecstatic elegance gay but disposed. We me rent
@@ -146,7 +146,7 @@
                 <svg class="yourchoice__item-icon">
                   <use href="./images/svg/sprite-svg.svg#LTE1"></use>
                 </svg>
-                <h2 class="yourchoice__item-title">Possible procured trifling</h2>
+                <h4 class="yourchoice__item-title">Possible procured trifling</h4>
               </div>
               <p class="yourchoice__item-text">
                 We me rent been part what. An concluded sportsman offending so provision mr
@@ -158,7 +158,7 @@
                 <svg class="yourchoice__item-icon">
                   <use href="./images/svg/sprite-svg.svg#Thunder-move"></use>
                 </svg>
-                <h2 class="yourchoice__item-title">Open game</h2>
+                <h4 class="yourchoice__item-title">Open game</h4>
               </div>
               <p class="yourchoice__item-text">
                 Shy merits say advice ten before lovers innate add. She cordially behaviour can
@@ -170,7 +170,7 @@
                 <svg class="yourchoice__item-icon">
                   <use href="./images/svg/sprite-svg.svg#Attachment"></use>
                 </svg>
-                <h2 class="yourchoice__item-title">Endeavor</h2>
+                <h4 class="yourchoice__item-title">Endeavor</h4>
               </div>
               <p class="yourchoice__item-text">
                 Improve ashamed married expense bed her comfort pursuit mrs. Four time took ye your
@@ -182,7 +182,7 @@
                 <svg class="yourchoice__item-icon">
                   <use href="./images/svg/sprite-svg.svg#Bulb"></use>
                 </svg>
-                <h2 class="yourchoice__item-title">Comfort pursuit</h2>
+                <h4 class="yourchoice__item-title">Comfort pursuit</h4>
               </div>
               <p class="yourchoice__item-text">
                 Had denoting properly jointure you occasion directly raillery. In said to of poor
@@ -195,13 +195,12 @@
           </div>
         </div>
       </section>
-
       <!-- Increase -->
       <section class="increase">
         <div class="container increase__cont">
           <div class="increase__content">
             <h2 class="increase__title">
-              Increase your business <span class="increase__title-span">traffic</span>
+              Increase your business <span class="title-akcent">traffic</span>
             </h2>
             <p class="increase__text">
               We are committed to processing the information in order to contact you and talk about
@@ -219,13 +218,12 @@
           <img class="increase__picture" src="./images/picture.png" alt="abstract" />
         </div>
       </section>
-
       <!-- Savemoney -->
       <section class="savemoney">
         <div class="container savemoney__cont">
           <h2 class="savemoney__title">
-            3 Simple Ways To <span class="savemoney__title-akcent">Save</span> A Bunch <br />
-            Of <span class="savemoney__title-akcent">Money</span> When Buying A New Computer
+            3 Simple Ways To <span class="title-akcent">Save</span> A Bunch <br />
+            Of <span class="title-akcent">Money</span> When Buying A New Computer
           </h2>
           <p class="savemoney__text">
             Fully customizable and neatly organized components <br />
@@ -251,20 +249,130 @@
           </div>
         </div>
       </section>
-
       <!-- Create -->
       <section class="create">
         <div class="container create__cont">
           <div class="create__box">
             <h2 class="create__title">
-              Create your <span class="create__title-akcent">next project</span> with startup
-              framework
+              Create your <span class="title-akcent">next project</span> with startup framework
             </h2>
             <button class="button create__button" type="button">Get Started</button>
           </div>
           <img class="create__picture" src="./images/step.png.png" alt="abstract" />
         </div>
       </section>
+      <!-- Invest -->
+      <section class="invest">
+        <div class="container invest__cont">
+          <div class="invest__content">
+            <h2 class="ivest__title">
+              Invest property for better <span class="title-akcent">business</span>
+            </h2>
+            <p class="invest__text">
+              We are committed to processing the information in order to contact you and talk about
+              your project. We are committed to processing the information.
+            </p>
+            <button class="button invest__button" type="button">Learn More</button>
+          </div>
+
+          <!-- article -->
+          <article class="invest__product product">
+            <img
+              src="./images/invest-img/title-img.jpg"
+              alt="invest-product"
+              class="product__img"
+            />
+            <div class="product__info">
+              <h4 class="product__name">Omah mukti residence</h4>
+              <address class="product__adress">Merpati sidomuncul 26 street, UK</address>
+              <p class="product__price">$176,000</p>
+              <a href="#" class="product__link">Funding Request</a>
+              <ul class="product__desc desc">
+                <li class="desc__item">
+                  <p class="desc__value">13%</p>
+                  <p class="desc__name">Apr</p>
+                </li>
+                <li class="desc__item">
+                  <p class="desc__value">68%</p>
+                  <p class="desc__name">Ltv</p>
+                </li>
+                <li class="desc__item">
+                  <p class="desc__value">12 mth</p>
+                  <p class="desc__name">Loan</p>
+                </li>
+              </ul>
+            </div>
+            <div class="product__aside aside">
+              <p class="aside__value">6 month</p>
+              <p class="aside__name">increase 12%</p>
+            </div>
+            <img src="./images/invest-img/arrow-png.png" alt="arrow" class="product__icon" />
+            <img src="./images/invest-img/map-png.png" alt="Map" class="product__background" />
+          </article>
+        </div>
+      </section>
+
+      <!-- Features -->
+      <section class="feature">
+        <div class="container feature__cont">
+          <div class="feature__picture">
+            <img src="./images/features/Mask.jpg" alt="Mask" class="feature__picture-img" />
+            <img src="./images/features/Group.png" alt="Group" class="feature__picture-img1" />
+            <img src="./images/features/Group 8.png" alt="Group" class="feature__picture-img2" />
+            <img src="./images/features/Group 2.png" alt="Group" class="feature__picture-img3" />
+          </div>
+          <div class="feature__content">
+            <h3 class="feature__content-title">Help Finding Information Online</h3>
+            <p class="feature__content-text">
+              Fully customizable and neatly organized components will help you work faster without
+              limiting creative freedom.
+            </p>
+            <div class="feature__items">
+              <div class="feature__item--left">
+                <svg class="feature__item-icon">
+                  <use href="./images/svg/sprite-svg.svg#Swiss-knife"></use>
+                </svg>
+                <h4 class="feature__item-title">Feature One</h4>
+                <p class="feature__item-text">
+                  Fully customizable and neatly organized components will help you work faster
+                </p>
+              </div>
+              <div class="feature__item">
+                <svg class="feature__item-icon">
+                  <use href="./images/svg/sprite-svg.svg#LTE"></use>
+                </svg>
+                <h4 class="feature__item-title">Feature Two</h4>
+                <p class="feature__item-text">
+                  Fully customizable and neatly organized components will help you work faster
+                </p>
+              </div>
+            </div>
+            <img
+              src="./images/features/background.png"
+              alt="background"
+              class="feature__background-img"
+            />
+          </div>
+        </div>
+      </section>
+
+      <!-- Form -->
+      <form class="form">
+        <div class="container form__cont">
+          <h3 class="form__title">There are many reasons to get down</h3>
+          <p class="form__text">
+            There are many reasons to get down and start to get depressed about your situation.
+          </p>
+          <div class="form__field">
+            <label class="form__label">
+              <input class="form__input" type="email" name="email" placeholder="Your Email" />
+            </label>
+            <button class="button form__button" type="submit">Send</button>
+          </div>
+          <p class="form__rule">No spam. Only releases, updates and discounts</p>
+          <img src="./images/form-bgc.png" alt="background" class="form__background" />
+        </div>
+      </form>
     </main>
   </body>
 </html>
