--- a/index.html
+++ b/index.html
@@ -374,5 +374,113 @@
         </div>
       </form>
     </main>
+    <footer class="footer">
+      <div class="container footer__cont">
+        <div class="footer__author">
+          <h4 class="footer__author-name">ARShakir</h4>
+          <ul class="footer__social social">
+            <li class="social__item">
+              <a href="#" class="social__item-link">
+                <svg class="social__item-icon">
+                  <use href="./images/svg/sprite-svg.svg#google"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social__item">
+              <a href="#" class="social__item-link">
+                <svg class="social__item-icon">
+                  <use href="./images/svg/sprite-svg.svg#twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social__item">
+              <a href="#" class="social__item-link">
+                <svg class="social__item-icon">
+                  <use href="./images/svg/sprite-svg.svg#facebook"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
+        <div class="footer__site-nav site-nav">
+          <ul class="site-nav__colum">
+            <h5 class="site-nav__title">First</h5>
+            <ul class="site-nav__list">
+              <li class="site-nav__item">
+                <a href="#" class="site-nav__link">First page</a>
+              </li>
+              <li class="site-nav__item">
+                <a href="#" class="site-nav__link">Second page</a>
+              </li>
+              <li class="site-nav__item">
+                <a href="#" class="site-nav__link">Third page</a>
+              </li>
+              <li class="site-nav__item">
+                <a href="#" class="site-nav__link">Fourth page</a>
+              </li>
+            </ul>
+          </ul>
+          <ul class="site-nav__colum">
+            <h5 class="site-nav__title">Second</h5>
+            <ul class="site-nav__list">
+              <li class="site-nav__item">
+                <a href="#" class="site-nav__link">First page</a>
+              </li>
+              <li class="site-nav__item">
+                <a href="#" class="site-nav__link">Second page</a>
+              </li>
+              <li class="site-nav__item">
+                <a href="#" class="site-nav__link">Third page</a>
+              </li>
+              <li class="site-nav__item">
+                <a href="#" class="site-nav__link">Fourth page</a>
+              </li>
+            </ul>
+          </ul>
+          <ul class="site-nav__colum">
+            <h5 class="site-nav__title">Third</h5>
+            <ul class="site-nav__list">
+              <li class="site-nav__item">
+                <a href="#" class="site-nav__link">First page</a>
+              </li>
+              <li class="site-nav__item">
+                <a href="#" class="site-nav__link">Second page</a>
+              </li>
+              <li class="site-nav__item">
+                <a href="#" class="site-nav__link">Third page</a>
+              </li>
+              <li class="site-nav__item">
+                <a href="#" class="site-nav__link">Fourth page</a>
+              </li>
+            </ul>
+          </ul>
+          <ul class="site-nav__colum">
+            <h5 class="site-nav__title">Fourth</h5>
+            <ul class="site-nav__list">
+              <li class="site-nav__item">
+                <a href="#" class="site-nav__link">First page</a>
+              </li>
+              <li class="site-nav__item">
+                <a href="#" class="site-nav__link">Second page</a>
+              </li>
+              <li class="site-nav__item">
+                <a href="#" class="site-nav__link">Third page</a>
+              </li>
+              <li class="site-nav__item">
+                <a href="#" class="site-nav__link">Fourth page</a>
+              </li>
+            </ul>
+          </ul>
+        </div>
+        <div class="footer__copyright">
+          <div class="copyright">
+            <p class="copyright__text">&#169 Copyrights 2021</p>
+            <p class="copyright__text">Privacy policy</p>
+            <p class="copyright__text">Terms of service</p>
+          </div>
+        </div>
+           <img src="./images/footer-bg.png" alt="background" class="footer__bg">
+      </div>
+    </footer>
   </body>
 </html>
