choose of display: grid

--- a/index.html
+++ b/index.html
@@ -58,7 +58,6 @@
               height="80"
               src="https://www.youtube.com/embed/6RwNT2ravz0"
               title="YouTube video player"
-              frameborder="0"
               allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
               allowfullscreen
             ></iframe>
@@ -76,6 +75,7 @@
       </section>
       <!-- Partners -->
       <section class="partners">
+        <h2 class="partners__title">Partners</h2>
         <div class="container partners__cont">
           <a href="#" class="partners__link">
             <svg class="partners__icon">
@@ -118,72 +118,60 @@
           </p>
           <ul class="yourchoice__list">
             <li class="yourchoice__item">
-              <div class="yourchoice__item-box">
-                <svg class="yourchoice__item-icon">
-                  <use href="./images/svg/sprite-svg.svg#Flip-horizontal"></use>
-                </svg>
-                <h4 class="yourchoice__item-title">Ecstatic elegance</h4>
-              </div>
+              <svg class="yourchoice__item-icon">
+                <use href="./images/svg/sprite-svg.svg#Flip-horizontal"></use>
+              </svg>
+              <h4 class="yourchoice__item-title">Ecstatic elegance</h4>
               <p class="yourchoice__item-text">
                 Article nor prepare chicken you him now. Shy merits say advice ten before lovers
                 innate add.
               </p>
             </li>
             <li class="yourchoice__item">
-              <div class="yourchoice__item-box">
-                <svg class="yourchoice__item-icon">
-                  <use href="./images/svg/sprite-svg.svg#Airpods"></use>
-                </svg>
-                <h4 class="yourchoice__item-title">Folly words widow</h4>
-              </div>
+              <svg class="yourchoice__item-icon">
+                <use href="./images/svg/sprite-svg.svg#Airpods"></use>
+              </svg>
+              <h4 class="yourchoice__item-title">Folly words widow</h4>
               <p class="yourchoice__item-text">
                 Effect if in up no depend seemed. Ecstatic elegance gay but disposed. We me rent
                 been part what.
               </p>
             </li>
             <li class="yourchoice__item">
-              <div class="yourchoice__item-box">
-                <svg class="yourchoice__item-icon">
-                  <use href="./images/svg/sprite-svg.svg#LTE1"></use>
-                </svg>
-                <h4 class="yourchoice__item-title">Possible procured trifling</h4>
-              </div>
+              <svg class="yourchoice__item-icon">
+                <use href="./images/svg/sprite-svg.svg#LTE1"></use>
+              </svg>
+              <h4 class="yourchoice__item-title">Possible procured trifling</h4>
               <p class="yourchoice__item-text">
                 We me rent been part what. An concluded sportsman offending so provision mr
                 education.
               </p>
             </li>
             <li class="yourchoice__item">
-              <div class="yourchoice__item-box">
-                <svg class="yourchoice__item-icon">
-                  <use href="./images/svg/sprite-svg.svg#Thunder-move"></use>
-                </svg>
-                <h4 class="yourchoice__item-title">Open game</h4>
-              </div>
+              <svg class="yourchoice__item-icon">
+                <use href="./images/svg/sprite-svg.svg#Thunder-move"></use>
+              </svg>
+              <h4 class="yourchoice__item-title">Open game</h4>
               <p class="yourchoice__item-text">
                 Shy merits say advice ten before lovers innate add. She cordially behaviour can
                 attempted estimable.
               </p>
             </li>
             <li class="yourchoice__item">
-              <div class="yourchoice__item-box">
-                <svg class="yourchoice__item-icon">
-                  <use href="./images/svg/sprite-svg.svg#Attachment"></use>
-                </svg>
-                <h4 class="yourchoice__item-title">Endeavor</h4>
-              </div>
+              <svg class="yourchoice__item-icon">
+                <use href="./images/svg/sprite-svg.svg#Attachment"></use>
+              </svg>
+              <h4 class="yourchoice__item-title">Endeavor</h4>
               <p class="yourchoice__item-text">
                 Improve ashamed married expense bed her comfort pursuit mrs. Four time took ye your
                 as fail lady.
               </p>
             </li>
             <li class="yourchoice__item">
-              <div class="yourchoice__item-box">
-                <svg class="yourchoice__item-icon">
-                  <use href="./images/svg/sprite-svg.svg#Bulb"></use>
-                </svg>
-                <h4 class="yourchoice__item-title">Comfort pursuit</h4>
-              </div>
+              <svg class="yourchoice__item-icon">
+                <use href="./images/svg/sprite-svg.svg#Bulb"></use>
+              </svg>
+              <h4 class="yourchoice__item-title">Comfort pursuit</h4>
               <p class="yourchoice__item-text">
                 Had denoting properly jointure you occasion directly raillery. In said to of poor
                 full be post face snug.
@@ -328,7 +316,7 @@
               limiting creative freedom.
             </p>
             <div class="feature__items">
-              <div class="feature__item--left">
+              <div class="feature__item">
                 <svg class="feature__item-icon">
                   <use href="./images/svg/sprite-svg.svg#Swiss-knife"></use>
                 </svg>
@@ -374,6 +362,8 @@
         </div>
       </form>
     </main>
+
+    <!-- Footer -->
     <footer class="footer">
       <div class="container footer__cont">
         <div class="footer__author">
@@ -403,7 +393,7 @@
           </ul>
         </div>
         <div class="footer__site-nav site-nav">
-          <ul class="site-nav__colum">
+          <div class="site-nav__colum">
             <h5 class="site-nav__title">First</h5>
             <ul class="site-nav__list">
               <li class="site-nav__item">
@@ -419,8 +409,8 @@
                 <a href="#" class="site-nav__link">Fourth page</a>
               </li>
             </ul>
-          </ul>
-          <ul class="site-nav__colum">
+          </div>
+          <div class="site-nav__colum">
             <h5 class="site-nav__title">Second</h5>
             <ul class="site-nav__list">
               <li class="site-nav__item">
@@ -436,8 +426,8 @@
                 <a href="#" class="site-nav__link">Fourth page</a>
               </li>
             </ul>
-          </ul>
-          <ul class="site-nav__colum">
+          </div>
+          <div class="site-nav__colum">
             <h5 class="site-nav__title">Third</h5>
             <ul class="site-nav__list">
               <li class="site-nav__item">
@@ -453,8 +443,8 @@
                 <a href="#" class="site-nav__link">Fourth page</a>
               </li>
             </ul>
-          </ul>
-          <ul class="site-nav__colum">
+          </div>
+          <div class="site-nav__colum">
             <h5 class="site-nav__title">Fourth</h5>
             <ul class="site-nav__list">
               <li class="site-nav__item">
@@ -470,16 +460,16 @@
                 <a href="#" class="site-nav__link">Fourth page</a>
               </li>
             </ul>
-          </ul>
+          </div>
         </div>
         <div class="footer__copyright">
           <div class="copyright">
-            <p class="copyright__text">&#169 Copyrights 2021</p>
+            <p class="copyright__text">&#169; Copyrights 2021</p>
             <p class="copyright__text">Privacy policy</p>
             <p class="copyright__text">Terms of service</p>
           </div>
         </div>
-           <img src="./images/footer-bg.png" alt="background" class="footer__bg">
+        <img src="./images/footer-bg.png" alt="background" class="footer__bg" />
       </div>
     </footer>
   </body>
